[gd_scene load_steps=5 format=3 uid="uid://dd7gp117583gp"]

[ext_resource type="PackedScene" uid="uid://yvshx12gqkta" path="res://scenes/sweeta.tscn" id="1_4ski7"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_qk5f8"]
[ext_resource type="PackedScene" uid="uid://d231xi5rkt6ta" path="res://scenes/skeleton.tscn" id="2_c503a"]

[sub_resource type="Curve2D" id="Curve2D_ldh6n"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -41, -56, 0, 0, 0, 0, 1321, -56, 0, 0, 0, 0, 1320, 753, 0, 0, 0, 0, -40, 751, 0, 0, 0, 0, -40, -56)
}
point_count = 5

[node name="Main" type="Node" node_paths=PackedStringArray("player_node")]
script = ExtResource("1_qk5f8")
enemy_scene = ExtResource("2_c503a")
player_node = NodePath("Sweeta")

[node name="Sweeta" parent="." instance=ExtResource("1_4ski7")]

[node name="MobSpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="EnemySpawner" type="Path2D" parent="."]
curve = SubResource("Curve2D_ldh6n")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemySpawner"]
position = Vector2(-41, -56)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(641, 359)

[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_mob_spawn_timer_timeout"]
